SLING-443 - warn about potential PermGen size problems as well
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/parent@905548 13f79535-47bb-0310-9956-ffa450edef68